--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
 
 
     <application
+        android:name=".listing.di.MyApp"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -16,9 +17,8 @@
         android:theme="@style/Theme.DesafioAndroid"
         tools:targetApi="31">
         <activity
-            android:name=".listing.presentation.MainActivity"
+            android:name=".listing.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.DesafioAndroid">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
