--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,7 @@ android {
     buildFeatures {
         compose true
     }
-    kapt {
-        correctErrorTypes = true
-    }
+
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.2'
     }
@@ -63,6 +61,7 @@ dependencies {
     implementation 'androidx.compose.ui:ui-graphics'
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.13.5"
     testImplementation 'app.cash.turbine:turbine:0.13.0'
@@ -111,4 +110,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.2'
     implementation 'androidx.room:room-ktx:2.5.2'
     kapt 'androidx.room:room-compiler:2.5.2'
+}
+kapt {
+    correctErrorTypes = true
 }
